# Change Log
This project adheres to [Semantic Versioning](http://semver.org/).

## [Unreleased]
### Added

### Changed

### Fixed


## EvoPER [0.5.0] - 2018-05-26
### Added
- OptionsTS The option class for Tabu search algorithm
- abm.tabu The EvoPER Tabu search implementation
- abm.tabu.R New file containing the the tabu search implementation
- generateSolution Generates combinatory solutions
- pop.last Pop the last element from list
- pop.first Pop the first element from list
- push Push an element to a list
- searchrow Search data on a matrix
- paramconverter Convert parameter from continuous to discrete and vice versa

### Changed
- extremize Changed the wrapper for supporting Tabu search
- Class Estimates optimization replace rbind by data.table's rbindlist
- ObjectiveFunction support for cast parameter to integer
- enforceBounds support for cast parameter to integer
- enforceBounds support for discrete levels
- abd.pso added paramconverter
- abd.acor added paramconverter
- abd.saa added paramconverter
- abd.ees1 added paramconverter
- abd.ees2 added paramconverter

### Fixed


## EvoPER [0.4.0] - 2017-03-14
### Added
- f0.rosenbrockn Rosenbrock of N parameters for variadic input
- f1.rosenbrockn Rosenbrock of N parameters for vectors
- f0.cigar Cigar of N parameters for variadic input
- f1.cigar Cigar of N parameters for vectors
- f0.schwefel Schwefel of N parameters for variadic input
- f1.schwefel Schwefel of N parameters for vectors
- f0.bohachevsky Bohachevsky of N parameters for variadic input
- f1.bohachevsky Bohachevsky of N parameters for vectors
- f0.schaffer Schaffer of N parameters for variadic input
- f1.schaffer Schaffer of N parameters for vectors
- random.wheel Function for randomlt gerating random seeds
- predatorprey.plot1 A wrapper for predatorprey.plot0 for parameter list instead single vars
- compare.algorithms1 Sistematic comparison of optimization algorithms
- show.comp1 Plot the results of 'compare.algorithms1'