@@ -186,8 +186,12 @@ importFrom(methods,new)
 importFrom(reshape,melt)
 importFrom(rrepast,AoE.LatinHypercube)
 importFrom(rrepast,AoE.RandomSampling)
+importFrom(rrepast,GetFactorLevels)
 importFrom(rrepast,col.sum)
 importFrom(stats,qt)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(utils,head)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,tail)
+importFrom(utils,txtProgressBar)
