@@ -6,11 +6,13 @@ Evolutionary Parameter Estimation for 'Repast Simphony' Models.
 
 ## Description
 
-The EvoPER, Evolutionary Parameter Estimation for 'Repast Simphony'
-    Agent-Based framework (<https://repast.github.io/>), provides optimization
-    driven parameter estimation methods based on evolutionary computation
-    techniques which could be more efficient and require, in some cases,
-    fewer model evaluations than other alternatives relying on experimental design.
+The EvoPER, Evolutionary Parameter Estimation for Individual-based Models is an extensible 
+      package providing optimization driven parameter estimation methods using metaheuristics  and 
+      evolutionary computation techniques (Particle Swarm Optimization, Simulated Annealing, Ant Colony Optimization 
+      for continuous domains, Tabu Search, Evolutionary Strategies, ...)  which could be more efficient and require, 
+      in some cases, fewer model evaluations than alternatives relying on experimental design.  Currently there 
+      are built in support for models developed with 'Repast Simphony'  Agent-Based framework (<https://repast.github.io/>)  
+      and with NetLogo (<https://ccl.northwestern.edu/netlogo/>) which are the most used frameworks for Agent-based modeling.     
 
 ## License
 
