@@ -31,8 +31,8 @@ An implementation of Tabu Search algorithm for parameter estimation
 
 }
 \references{
-[1] Fred Glover (1989). "Tabu Search – Part 1". ORSA Journal on Computing,
-190–206. doi:10.1287/ijoc.1.3.190.
-[2] Fred Glover (1990). "Tabu Search – Part 2". ORSA Journal on Computing,
-4–32. doi:10.1287/ijoc.2.1.4.
+[1] Fred Glover (1989). "Tabu Search - Part 1". ORSA Journal on Computing,
+190-206. doi:10.1287/ijoc.1.3.190.
+[2] Fred Glover (1990). "Tabu Search - Part 2". ORSA Journal on Computing,
+4-32. doi:10.1287/ijoc.2.1.4.
 }
