@@ -9,7 +9,7 @@ This project adheres to [Semantic Versioning](http://semver.org/).
 ### Fixed
 
 
-## EvoPER [0.5.0] - 2018-05-26
+## EvoPER [0.5.0] - 2018-08-30
 ### Added
 - OptionsTS The option class for Tabu search algorithm
 - abm.tabu The EvoPER Tabu search implementation
@@ -20,6 +20,15 @@ This project adheres to [Semantic Versioning](http://semver.org/).
 - push Push an element to a list
 - searchrow Search data on a matrix
 - paramconverter Convert parameter from continuous to discrete and vice versa
+- netlogo-helper.R Auxiliary functions for running R/NetLogo models
+- NLWrapper.FindJar Wrapper function for NetLogo models
+- NLWrapper.Model Wrapper function for NetLogo models
+- NLWrapper.Shutdown Wrapper function for NetLogo models
+- NLWrapper.GetParameter Wrapper function for NetLogo models
+- NLWrapper.SetParameter Wrapper function for NetLogo models
+- NLWrapper.SetRandomSeed Wrapper function for NetLogo models
+- NLWrapper.Run Wrapper function for NetLogo models
+- NLWrapper.RunExperiment Wrapper function for NetLogo models
 
 ### Changed
 - extremize Changed the wrapper for supporting Tabu search
